AUT-4199: Add principal validation to MFA method delete handler
- Moved logic for handling no user profile found from the mfa methods service to the handler
--- This is because the user profile is needed for principal validation